--- a/frontend/src/pages/daily/components/repeat/DateDropDown.scss
+++ b/frontend/src/pages/daily/components/repeat/DateDropDown.scss
@@ -1,5 +1,5 @@
 .selectDrop {
-    background-color: black;
+    background-color: white;
     list-style: none;
     border: 1px solid #a8b6e7;
     padding: 5px;
@@ -7,7 +7,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
     li {
         display: flex;
         align-items: center;
