--- a/frontend/src/pages/daily/components/repeat/RepeatBtn.scss
+++ b/frontend/src/pages/daily/components/repeat/RepeatBtn.scss
@@ -12,7 +12,7 @@
         height: 25px;
         width: 150px;
         text-align: center;
-
+        z-index: 100;
         #repeatText {
             text-align: center;
             height: 25px;
